@@ -58,7 +58,7 @@ units, amount of free memory and more.</p>
   System.Max_Base_Digits        System.Default_Bit_Order
   System.Max_Mantissa           System.Login_Shell
   System.Restricted_Shell       System.Script_License
-  System.Script_Software_Model
+  System.Script_Software_Model  System.System_Version
 </pre>
         &nbsp;<br>
         <div class="code_caption">
@@ -69,7 +69,9 @@ units, amount of free memory and more.</p>
 
 <ul>
 <li>
-<b>System.System_Name </b>- name of the system...string "SYSTEM_NAME_SparForte"</li>
+<b>System.System_Name</b>- name of the system...string "SYSTEM_NAME_SPARFORTE"</li>
+
+<b>System.System_Version</b>- return the SparForte version string (e.g. 1.0)</li>
 
 <li>
 <b>System.Min_Int</b> - smallest integer</li>
