@@ -97,6 +97,25 @@ The arguments are specific to the pragmas they refer to.</p>
 
 <p><b>Ada</b>: If a pragma is not recognized, it is ignored by Ada.</p>
 
+        <center>
+        <div class="code">
+                <p class="code">
+<b>pragma</b> annotate( summary, "arraysum" );<br>
+<b>pragma</b> annotate( description, "Compute the sum and product of an array of integers." );<br>
+<b>pragma</b> annotate( see_also, "http://rosettacode.org/wiki/Sum_and_product_of_an_array" );<br>
+<b>pragma</b> annotate( author, "Ken O. Burtch" );<br>
+<br>
+<b>pragma</b> license( unrestricted );<br>
+<br>
+<b>pragma</b> software_model( shell_script );<br>
+<b>pragma</b> restriction( no_external_commands );<br>&nbsp;<br></p>
+        <div class="code_caption">
+                <b>Example</b>: An example of pragmas</span>
+        </div>
+        </div>
+        </center>
+
+
 <h4>Architectural Pragmas</h4>
 
 <p>Interpreter directives addressing business concerns, data design,
